--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
-sudo: false
+ghc:
+  - 7.8
+  - 8.0.2
 
-# Caching so the next build will be fast too.
-cache:
-  directories:
-  - $HOME/.stack
-
-before_install:
-# Download and unpack the stack executable
-- mkdir -p ~/.local/bin
-- export PATH=$HOME/.local/bin:$PATH
-- travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
+install:
+  - cabal install --only-dependencies --enable-tests
+script:
+  - cabal configure --enable-tests && cabal build && cabal test
